<resources>
    <string name="application">AudioJournal</string>
    <string name="stop_recording">Stop</string>
    <string name="start_recording">Record</string>
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="upload">Upload</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="artist_label">Artist:</string>
    <string name="composer_label">Composer:</string>
    <string name="duration_label">Duration:</string>
    <string name="date_label">Date:</string>
    <string name="clipped_samples_label">Clipped samples:</string>
    <string name="title_label">Title:</string>
    <string name="title_template_label">Title template:</string>
    <string name="prefix_label">Prefix:</string>
    <string name="format_label">Format:</string>
    <string name="filename_label">Filename:</string>
    <string name="auto_upload_label">Upload automatically:</string>
    <string name="delete_template">Delete template</string>
    <string name="edit_template">Edit template</string>
    <string name="add_template">Add template</string>
    <string name="manage_templates">Manage templates</string>
    <string name="choose_template">Choose template</string>
    <string name="record_using_template">Record using this template</string>
    <string name="use_as_default_template">Use as default template</string>
    <string name="mp3">MP3</string>
    <string name="flac">FLAC</string>
    <string name="done">Done</string>
</resources>
