<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include android:id="@+id/appbar" layout="@layout/appbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/metadata_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_template_label" />

            <EditText
                android:id="@+id/title_template_value"
                style="@style/metadata_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/metadata_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_label" />

            <EditText
                android:id="@+id/artist_value"
                style="@style/metadata_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/metadata_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/composer_label" />

            <EditText
                android:id="@+id/composer_value"
                style="@style/metadata_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/metadata_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefix_label" />

            <EditText
                android:id="@+id/prefix_value"
                style="@style/metadata_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/metadata_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filename_label" />

            <EditText
                android:id="@+id/filename_value"
                style="@style/metadata_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/metadata_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_label" />

            <RadioGroup
                android:id="@+id/format_value"
                style="@style/metadata_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/format_value_mp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp3" />

                <RadioButton
                    android:id="@+id/format_value_flac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flac" />
            </RadioGroup>
        </TableRow>
    </TableLayout>
</LinearLayout>
