<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<TableRow
		android:id="@+id/title_template"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	
	    <TextView
	    	style="@style/metadata_label"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/title_template_label" />
	    
	    <TextView
	    	android:id="@+id/title_template_value"
	    	style="@style/metadata_content"
	    	android:layout_width="wrap_content"
	    	android:layout_height="match_parent" />
	</TableRow>
	
	<TableRow
		android:id="@+id/prefix"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	
		<TextView
			style="@style/metadata_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/prefix_label" />
		
		<TextView
			android:id="@+id/prefix_value"
			style="@style/metadata_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</TableRow>
	
	<TableRow
		android:id="@+id/format"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			style="@style/metadata_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/format_label" />

		<TextView
			android:id="@+id/format_value"
			style="@style/metadata_content"
			android:layout_width="wrap_content"
			android:layout_height="match_parent" />
	</TableRow>
</TableLayout>
